--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+src_/*
+src_ref/*
+testing/*/*.round.py
+testing/*/*.round2.py
+testing_/*
+testing_ref/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
