--- a/testing/action/test_yamls/flow_input.yaml
+++ b/testing/action/test_yamls/flow_input.yaml
@@ -1,5 +1,5 @@
 flow123d_version: 3.1.0
-problem: !Coupling_Sequential
+problem: !modulek.Coupling_Sequential
   description: Simple dual porosity test - steady flow, simple transport
   mesh:
     mesh_file: ../00_mesh/square_1x1_40el.msh
