--- a/.github/workflows/pull_req_pytests.yml
+++ b/.github/workflows/pull_req_pytests.yml
@@ -1,18 +1,12 @@
-name: Pytests
-
 on: pull_request
-
+name: Pytests
 jobs:
   build:
-
+    name: GitHub Action for pytest
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.6, 3.7, 3.8]
-
     steps:
-    - name: Python Pylin GitHub Action
-      uses: fylein/python-pytest-github-action@v2
+    - uses: actions/checkout@master
+    - name: GitHub Action for pytest
+      uses: cclauss/GitHub-Action-for-pytest@master
       with:
-        args: pip3 install -r requirements.txt && pytest test/unit
+        args: pytest
