--- a/.github/workflows/pull_req_pytests.yml
+++ b/.github/workflows/pull_req_pytests.yml
@@ -9,8 +9,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
         pip install pytypes
+#        pip install -r requirements.txt
     - name: GitHub Action for pytest
       uses: cclauss/GitHub-Action-for-pytest@master
       with:
