--- a/.github/workflows/pull_req_pytests.yml
+++ b/.github/workflows/pull_req_pytests.yml
@@ -5,6 +5,10 @@ jobs:
     name: GitHub Action for pytest
     runs-on: ubuntu-latest
     steps:
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - uses: actions/checkout@master
     - name: GitHub Action for pytest
       uses: cclauss/GitHub-Action-for-pytest@master
