--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7]
 
     steps:
     - uses: actions/checkout@v1
@@ -21,7 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install tox
+        pip install tox tox-gh-actions
 #     - name: Lint with flake8
 #       run: |
 #         pip install flake8 
@@ -32,3 +32,4 @@ jobs:
     - name: Test with tox
       if: always()
       run: tox
+
