--- a/.github/workflows/pull_req_pytests.yml
+++ b/.github/workflows/pull_req_pytests.yml
@@ -1,6 +1,6 @@
-name: pull_req_test
+name: Python package
 
-on: [pull_request]
+on: [push]
 
 jobs:
   build:
@@ -9,10 +9,10 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6]
 
     steps:
-#    - uses: actions/checkout@v1
+    - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
@@ -21,7 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-#        pip install tox
+        pip install tox
 #     - name: Lint with flake8
 #       run: |
 #         pip install flake8 
@@ -29,10 +29,6 @@ jobs:
 #         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-#    - name: Test with tox
-#      if: always()
-#      run: tox
-    - name: GitHub Action for pytest
-      uses: cclauss/GitHub-Action-for-pytest@master
-      with:
-        args: pytest
+    - name: Test with tox
+      if: always()
+      run: tox
