--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
 #envlist = py34, py35, py36, pypy3
-envlist = py36, py37
+envlist = py36, py37, py38
 
 [testenv]
 # dependencies for tests (include dependencies of the package itself)
