--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -10,7 +10,6 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        mongodb-version: ['4.4']
 
     steps:
     - uses: actions/checkout@v1
@@ -19,9 +18,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Start MongoDB
-      uses: supercharge/mongodb-github-action@1.6.0
-      with:
-        mongodb-version: ${{ matrix.mongodb-version }}
+      run: sudo systemctl start mongod
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
