--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,12 @@
 
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py36, py37, py38
+envlist = py38
 
 [gh-actions]
 python =
-    3.6: py36
-    3.7: py37
+    #3.6: py36
+    #3.7: py37
     3.8: py38
 
 
