--- a/tox.ini
+++ b/tox.ini
@@ -2,13 +2,15 @@
 
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py38
+envlist = py38, py39, py310
 
 [gh-actions]
 python =
     #3.6: py36
     #3.7: py37
     3.8: py38
+    3.9: py38
+    3.10: py38
 
 
 [testenv]
