--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-18.04  # ubuntu-latest
+    runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
