--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -9,8 +9,12 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: ['3.8', '3.9', '3.10']
-
+        python-version: ['3.8', '3.9'] 
+        #, '3.10']
+        # pytest have problems with python 3.10, seems it was fixed just recently, 
+        # have to wait until it propagates to github environments
+        # otherwise we may force installation of latest pytest
+        
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
@@ -20,6 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        
         pip install -r requirements.txt
         pip install tox tox-gh-actions
 #     - name: Lint with flake8
